# open-translate

./: CLAUDE.md  Dockerfile  README.md  pyproject.toml  requirements.txt  server.py  start.sh
.github/workflows/: docker-publish.yml
.planning/: vast-deploy-plan.md
.planning/sessions/: 2026-04-14-google-translate-ui.md  2026-04-15-ocr-document-translation.md
scripts/: runpod-launch.sh  runpod-setup.sh
static/ui/: app.js  index.html  style.css
